# biblatex-bbl2bib

./: README.md  pyproject.toml
biblatex_bbl2bib/: bbl2bib.py  latex_command_parser.py
