[tool.poetry]
name = "biblatex_bbl2bib"
version = "0.1.0"
description = ""
authors = ["Audrey Seo <audreyleeseo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
